mule-user-guide/v/3.7/http-connector-reference.adoc
=  HTTP连接器参考
:keywords: anypoint studio, esb, connectors, http, https, http headers, query parameters, rest, raml

用于HTTP服务的Mule实用程序。

此页面可用作 link:/mule-user-guide/v/3.7/http-connector[HTTP连接器]的所有受支持属性和子元素的参考。


== 监听器

传入HTTP请求的侦听器。

监听器的=== 属性

[%header,cols="30a,70a"]
|===
| {名称{1}}说明
|路径 |侦听传入请求的路径。 +
类型：字符串+
要求：是+
默认值：无
| allowedMethods  |此侦听器允许的HTTP方法的逗号分隔列表。要允许所有方法，请不要定义属性。 +
类型：字符串+
必需：否+
默认值：无
| config-ref  |对此侦听器的配置元素的引用。如果未提供参考，则会创建一个默认配置。 +
类型：字符串+
要求：是+
默认值：无
| responseStreamingMode  |定义是否应该使用流发送响应。如果此属性不存在，则行为取决于有效负载的类型（它仅针对InputStream进行传输）。如果设置为true，它总是流。如果设置为false，它不会流。在流式传输完成后，响应会发送给用户。 +
传输编码：分块。 +
类型：枚举+
必需：否+
默认值：AUTO
| parseRequest  |默认情况下，请求被解析（例如，多部分请求被映射为Mule消息，其中有零净荷，每个部分都有入站附件）。如果此属性设置为false，则不执行分析，并且有效负载始终包含HTTP请求的原始内容。 +
类型：字符串+
必需：否+
默认值：无
|===

监听器的=== 子元素

[%header,cols="30a,10a,60a"]
|===
| {名称{1}}基数 |说明
|响应构建器 | 0..1  |包含应在响应中发送的所有参数（标题，状态码，响应短语）的定义。
|错误响应构建器 | 0..1  |包含应在响应中发送的所有参数（标题，状态码，响应短语）的定义。
|===

== 监听器配置
为一组监听器元素分组配置。

===  listener-config的属性
[%header,cols="30a,70a"]
|===
| {名称{1}}说明
| name  |标识注册表中的配置，以便请求消息处理器可以引用它。 +
类型：名称（无空格）+
要求：是+
用于通信的协议 |。有效值是HTTP和HTTPS。默认值是HTTP。使用HTTPS时，HTTP通信将使用TLS或SSL进行保护。如果将HTTPS配置为协议，则用户需要至少在此侦听器配置的tls：context子元素中配置密钥库。 +
类型：httpProtocol +
必需：否+
默认值：HTTP
|主持人 |发送请求的主持人。 +
类型：字符串+
要求：是+
默认值：无
|端口 |接收请求的端口。如果协议属性是HTTP（默认值），则默认值为80，如果协议属性为HTTPS，则默认值为443。
类型：整数+
必需：否+
默认值：无
| basePath  |用于引用此配置的所有请求的基本路径。 +
类型：字符串+
必需：否+
默认值：无
| tlsContext-ref  |引用TLS配置元素。这为此配置启用HTTPS。 +
类型：字符串+
必需：否+
默认值：无
| parseRequest  |默认情况下，请求被解析（例如，多部分请求被映射为Mule消息，其中有零净荷，每个部分都有入站附件）。如果此属性设置为false，则不执行分析，并且有效负载始终包含HTTP请求的原始内容。 +
类型：字符串+
必需：否+
默认值：无
| connectionIdleTimeout  |连接在关闭之前可保持空闲的毫秒数。此属性的值仅在启用持续连接时使用。
类型：整数+
必需：否+
默认值：30000
| usePersistentConnections  |如果为false，则每个连接在第一个请求完成后关闭。 +
类型：布尔+
必需：否+
默认值：true
|===

监听器配置的=== 子元素

[%header%autowidth.spread]
|===
| {名称{1}}基数
| TLS：上下文 | 0..1
|工作者线程轮廓 | 0..1
|===

==  HTTP响应生成器

=== 响应构建器的属性

没有响应构建器的属性。
没有响应构建器的子元素。

== 要求

=== 请求的属性

[%header,cols="30a,70a"]
|===
| {名称{1}}说明
|路径 |发送请求的路径。 +
类型：字符串+
要求：是+
默认值：无
|方法 |请求的HTTP方法。 +
类型：字符串+
必需：否+
默认值：无
| config-ref  |对此请求者的配置元素的引用。如果未提供参考，则会创建一个默认配置。 +
类型：字符串+
要求：是+
默认值：无
|源 |用于获取请求中发送的主体的表达式。缺省值为空，所以有效负载用作主体。 +
类型：字符串+
必需：否+
默认值：无
| 目标 |丰富表达式用于丰富当前消息与响应的主体。缺省值是"#payload"，所以在处理响应之后，其正文的内容被设置为消息的有效负载。 +
类型：字符串+
必需：否+
默认值：#payload
| followRedirects  |指定是否遵循重定向。 +
类型：布尔+
必需：否+
默认值：true
|主持人 |发送请求的主持人。 +
类型：字符串+
必需：否+
默认值：无
|端口 |发送请求的端口。如果协议属性为HTTP（默认值），那么默认值为80，如果协议属性为HTTPS，则默认值为443. +
类型：整数+
必需：否+
默认值：无
| parseResponse  |默认情况下，解析响应（例如，多部分响应被映射为Mule消息，其中有零负载，每个部分都有入站附件）。如果此属性设置为false，则不执行分析，并且有效负载始终包含HTTP响应的原始内容。 +
类型：布尔+
必需：否+
默认值：true
| requestStreamingMode  |定义是否应该使用流发送请求。如果此属性不存在，则行为取决于有效负载的类型（它仅针对InputStream进行传输）。如果设置为true，它总是流。如果设置为false，它不会流。当流完成时，请求被发送给用户Transfer-Encoding：分块。 +
类型：枚举+
必需：否+
默认值：AUTO
| sendBodyMode  |定义请求是否包含正文。如果AUTO，则取决于方法（GET，HEAD和OPTIONS不发送物体）。 +
类型：枚举+
必需：否+
默认值：AUTO
| responseTimeout  |请求元素阻止执行等待HTTP响应的流的最大时间。如果此值不存在，则使用来自Mule配置的默认响应超时。 +
类型：整数+
必需：否+
默认值：10秒
|===

请求的=== 子元素

[%header,cols="30a,10a,60a"]
|===
| {名称{1}}基数 |说明
|请求构建器 | 0..1  |包含应在请求中发送的所有参数（uri params，查询参数和标题）的定义。
|成功状态码验证器 | 0..1  |根据状态码配置响应的错误处理。
| failure-status-code-validator  | 0..1  |根据状态码配置响应的错误处理。
|===

== 请求构建器

=== 请求构建器的属性

`name`：标识构建器，以便其他元素可以引用它。
* 类型：名称（不包含空格）
* 必需：否

请求构建器没有子元素

=== 请求配置的属性

[%header,cols="30a,70a"]
|===
| {名称{1}}说明
用于通信的协议 |。有效值是HTTP和HTTPS。默认值是HTTP。使用HTTPS时，HTTP通信将使用TLS和SSL进行保护。如果将HTTPS配置为协议，则用户可以通过定义此侦听器配置的tls：context子元素来定制tls / ssl配置。如果没有定义tls：context，则默认的JVM证书将用于建立通信。 +
类型：httpProtocol +
必需：否+
默认值：HTTP
| name  |标识注册表中的配置，以便请求消息处理器可以引用它。 +
类型：名称（无空格）+
要求：是的
默认值：无
| basePath  |用于引用此配置的所有请求的基本路径。 +
类型：字符串+
必需：否+
默认值：无
| tlsContext-ref  |引用TLS上下文元素。这为此配置启用HTTPS。 +
类型：字符串+
必需：否+
默认值：无
| clientSocketProperties-ref  |引用TCP客户端套接字属性元素。 +
类型：字符串+
必需：否+
默认值：无
| proxy-ref  |引用代理上下文元素。 +
类型：字符串+
必需：否+
默认值：无
| maxConnections  |同时保持打开的出站连接的最大数量。默认情况下，连接数量是无限的。 +
类型：整数+
必需：否+
默认值：-1
| connectionIdleTimeout  |连接在关闭之前可保持空闲的毫秒数。此属性的值仅在启用持续连接时使用。 +
类型：整数+
必需：否+
默认值：30000
| usePersistentConnections  |如果为false，则每个连接在第一个请求完成后关闭。 +
类型：布尔+
必需：否+
默认值：true
| followRedirects  |指定是否遵循重定向。 +
类型：布尔+
必需：否+
默认值：true
|主持人 |发送请求的主持人。 +
类型：字符串+
必需：否+
默认值：无
|端口 |发送请求的端口。如果协议属性为HTTP（默认值），那么默认值为80，如果协议属性为HTTPS，则默认值为443. +
类型：整数+
必需：否+
默认值：无
| parseResponse  |默认情况下，解析响应（例如，多部分响应被映射为Mule消息，其中有零负载，每个部分都有入站附件）。如果此属性设置为false，则不执行分析，并且有效负载始终包含HTTP响应的原始内容。 +
类型：布尔+
必需：否+
默认值：true
| requestStreamingMode  |定义是否应该使用流发送请求。如果此属性不存在，则行为取决于有效负载的类型（它仅针对InputStream进行传输）。如果设置为true，它总是流。如果设置为false，它不会流。当流完成时，请求被发送给用户Transfer-Encoding：分块。 +
类型：枚举+
必需：否+
默认值：AUTO
| sendBodyMode  |定义请求是否包含正文。如果AUTO，则取决于方法（GET，HEAD和OPTIONS不发送物体）。 +
类型：枚举+
必需：否+
默认值：AUTO
| responseTimeout  |请求元素阻止执行等待HTTP响应的流的最大时间。如果此值不存在，则使用来自Mule配置的默认响应超时。 +
类型：整数+
必需：否+
默认值：10秒
|===

请求配置的=== 子元素

[%header,cols="30a,10a,60a"]
|===
| {名称{1}}基数 |说明
|抽象http请求认证提供者
| 0..1
|安全管理器是安全提供程序的容器。可以配置多个安全管理器;每个包含来自特定模块的提供者并且具有该模块类型。这个元素是抽象的 - 一个与安全有关的模块或者传输提供了一个合适的实现。
| TCP：客户端插座的属性
| 0..1
|
| TLS：上下文
| 0..1
|
| RAML-API构
| 0..1
|为正在使用的API指定一个RAML配置文件。
|代理
| 0..1
|通过代理进行出站连接的可重用配置元素。代理元素必须定义主机名和端口属性，并且可以选择定义用户名和密码。
| NTLM代理
| 0..1
|通过代理进行出站连接的可重用配置元素。代理元素必须定义主机名和端口属性，并且可以选择定义用户名和密码。
|===

== 基本认证
配置请求的基本身份验证。
基本认证的属性

[%header,cols="30a,70a"]
|===
| {名称{1}}说明
|用户名 |要验证的用户名。 +
类型：字符串+
要求：是+
默认值：无
|密码 |要验证的密码。 +
类型：字符串+
要求：是+
默认值：无
|抢先 |配置身份验证是否应先占先机。抢先式身份验证会在第一个请求中发送身份验证标头，而不是等待401响应代码发送它。 +
类型：布尔+
必需：否+
默认值：false
|===
没有基本认证的子元素。

== 摘要式身份验证

为请求配置摘要式身份验证。

摘要认证的=== 属性

[%header,cols="30a,70a"]
|===
| {名称{1}}说明
|用户名 |要验证的用户名。 +
类型：字符串+
要求：是+
默认值：无
|密码 |要验证的密码。 +
类型：字符串+
要求：是+
默认值：无
|===
摘要认证没有子元素。

==  NTLM身份验证

为请求配置NTLM身份验证。

===  ntlm-authentication的属性

[%header,cols="30a,70a"]
|===
| {名称{1}}说明
|用户名 |要验证的用户名。 +
类型：字符串+
要求：是+
默认值：无
|密码 |要认证的用户名。 +
类型：字符串+
要求：是+
默认值：无
|域 |要进行身份验证的域。 +
类型：字符串+
必需：否+
默认值：无
|工作站 |工作站进行身份验证。 +
类型：字符串+
必需：否+
默认值：无
|===
没有ntlm认证的子元素。

== 代理

通过代理进行出站连接的可重用配置元素。
代理元素必须定义主机名和端口属性，并且可以选择定义用户名和密码。

代理的=== 属性

`name`：标识注册表中的代理配置，以便它可以被请求配置引用。
类型：名称（无空格）+
要求：是+
默认值：无

没有代理的子元素。

==  NTLM代理

通过代理进行出站连接的可重用配置元素。
代理元素必须定义主机名和端口属性，并且可以选择
可以定义一个用户名和一个密码。

===  ntlm-proxy的属性

`name`：标识注册表中的代理配置，以便它可以被请求配置引用。
类型：名称（无空格）+
要求：是+
默认：不

没有ntlm-proxy的子元素。

== 配置

HTTP全局配置。

=== 配置的属性

`useTransportForUris`：向后兼容标志：自Mule 3.6以来，默认的HTTP URI通过新的HTTP连接器解​​析（例如使用MuleClient时）。如果设置为true，则会更改此行为，以便使用HTTP传输。
类型：布尔+
必需：否+
默认值：false
